# zeronorth

./: .gitignore  README.md
blocks/base/: main.tf
blocks/s3-lambda-hook/: main.tf
blocks/secrets/: main.tf
data/: valid.json
docs/: INSTRUCTIONS.md
services/challenge/: .env  .gitignore  README.md  backend.conf  main.py  pyproject.toml  test_main.py  variables.tf
services/challenge/src/: main.py
services/challenge/src/challenge/: service.py  test_service.py
services/challenge/terraform/: .terraform.lock.hcl  backend.example.conf  main.tf  variables.tf
terraform/modules/base/: main.tf
terraform/modules/github/: main.tf
terraform/modules/storage-hook/: locals.tf  main.tf  outputs.tf  variables.tf
