[project]
name = "challenge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Erik Håkansson", email = "erhaka@student.chalmers.se" }
]
dependencies = [
    "boto3>=1.35.76",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

